@@ -7,6 +7,9 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.1 (2005-04-??)
 --------------------------
 
+- Fixed bug in the NSBundle hack that caused a NULL pointer to be
+  dereferenced if looking up a non-existent class using NSBundle API.
+
 - Added ``OC_PythonUnicode`` and ``OC_PythonString`` classes that
   preserve the identity of ``str`` and ``unicode`` objects across
   the bridge.  Additionally, bridge for ``str`` now uses the default
